--- a/index.html
+++ b/index.html
@@ -589,13 +589,13 @@
   <section class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-md-3 col-lg-3 col-xl-3 col-12 mb-3-sm">
+        <div class="col-md-6 col-lg-3 col-xl-3 col-12 mb-3-sm mb-md-3">
           <div class="contact-title">
             <h4 class="text-primary font-3xl fw-regular">Looking For Help ?</h4>
             <h5 class="text-light-primary font-sm fw-normal">our Team Available 24/7</h5>
           </div>
         </div>
-        <div class="col-md-3 col-lg-3 col-xl-3 col-12 mb-3-sm">
+        <div class="col-md-6 col-lg-3 col-xl-3 col-12 mb-3-sm mb-md-3">
           <div class="service-card">
             <div class="icon-bg">
               <img src="assets/images/icons/Call.svg" height="25px" class="of-contain" alt="">
@@ -606,7 +606,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 col-lg-3 col-xl-3 col-12 mb-3-sm">
+        <div class="col-md-6 col-lg-3 col-xl-3 col-12 mb-3-sm mb-md-3">
           <div class="service-card">
             <div class="icon-bg">
               <img src="assets/images/icons/Mail.svg" height="25px" class="of-contain" alt="">
@@ -617,7 +617,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 col-lg-3 col-xl-3 col-12 mb-3-sm">
+        <div class="col-md-6 col-lg-3 col-xl-3 col-12 mb-3-sm mb-md-3">
           <div class="service-card">
             <div class="icon-bg">
               <img src="assets/images/icons/Whatsapp.svg" height="25px" class="of-contain" alt="">
