--- a/register.html
+++ b/register.html
@@ -257,8 +257,14 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 col-lg-6 col-xl-6 col-12 mb-3-sm">
-
+            <div class="col-md-4 col-lg-6 col-xl-6 col-12 mb-3-sm login-text">
+              <div class="content text-center">
+                <img src="assets/images/login-img.png" class="of-contain" alt="">
+                <div class="mt-4">
+                    <h5>Creating An Account Is Great For You!</h5>
+                    <p>Get access to exclusive deals, save travelers' details for quicker bookings and manage your upcoming bookings with ease!</p>
+                </div>
+            </div>
             </div>
           </div>
         </div>
@@ -269,13 +275,13 @@
   <section class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-md-3 col-lg-3 col-xl-3 col-12 mb-3-sm">
+        <div class="col-md-6 col-lg-3 col-xl-3 col-12 mb-3-sm mb-md-3">
           <div class="contact-title">
             <h4 class="text-primary font-3xl fw-regular">Looking For Help ?</h4>
             <h5 class="text-light-primary font-sm fw-normal">our Team Available 24/7</h5>
           </div>
         </div>
-        <div class="col-md-3 col-lg-3 col-xl-3 col-12 mb-3-sm">
+        <div class="col-md-6 col-lg-3 col-xl-3 col-12 mb-3-sm mb-md-3">
           <div class="service-card">
             <div class="icon-bg">
               <img src="assets/images/icons/Call.svg" height="25px" class="of-contain" alt="">
@@ -286,7 +292,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 col-lg-3 col-xl-3 col-12 mb-3-sm">
+        <div class="col-md-6 col-lg-3 col-xl-3 col-12 mb-3-sm mb-md-3">
           <div class="service-card">
             <div class="icon-bg">
               <img src="assets/images/icons/Mail.svg" height="25px" class="of-contain" alt="">
@@ -297,7 +303,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 col-lg-3 col-xl-3 col-12 mb-3-sm">
+        <div class="col-md-6 col-lg-3 col-xl-3 col-12 mb-3-sm mb-md-3">
           <div class="service-card">
             <div class="icon-bg">
               <img src="assets/images/icons/Whatsapp.svg" height="25px" class="of-contain" alt="">
