--- a/sign-in.html
+++ b/sign-in.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="assets/css/fancybox.css">
   <link rel="stylesheet" href="assets/css/owl.theme.default.css">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Hojuzaty | Register</title>
+  <title>Hojuzaty | Loign</title>
 </head>
 
 <body>
@@ -184,7 +184,7 @@
           <div class="row">
             <div class="col-md-12 col-lg-6 col-xl-6 col-12 mb-3-sm">
               <div class="auth-card">
-                <h3 class="text-center text-primary font-xl">Create An Account Using Your....</h3>
+                <h3 class="text-center text-primary font-xl">Sign In Using Your....</h3>
                 <div class="mt-3 ">
                   <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
                     <li class="nav-item w-50 d-flex" role="presentation">
@@ -212,16 +212,8 @@
                             <a href="reset.html" class="text-primary text-decoration-underline font-sm fw-normal mt-1">Forget Password ?</a>
                           </div>
                         </div>
-                        <p class="text-light-primary font-sm mb-2">Your password must have at least 8 characters, one uppercase letter, one lowercase letter and one number.</p>
-                        <div class="d-flex align-items-center">
-                          <input type="checkbox" class="me-2">
-                          <label for="" class="text-primary fw-normal font-sm">Send me offers and deals</label>
-                        </div>
-                        <button type="submit" class="main-btn mt-4">Create Accoount</button>
-                        <h5 class="text-light-primary font-normal fw-normal mt-3 text-center">Already have an account?  <a href="sign-in.html" class="text-decoration-underline font-normal fw-normal">Sign In</a></h5>
-                        <h6 class="mt-3 text-light-primary font-normal fw-normal">
-                          By creating an account, I acknowledge that I have read and agree to Hojuzaty <a href="terms.html" class="text-primary text-decoration-underline">Terms & Conditions</a> and <a href="privacy.html" class="text-primary text-decoration-underline">Privacy Policy</a>.
-                        </h6>
+                        <button type="submit" class="main-btn mt-4">Sign In</button>
+                        <h5 class="text-light-primary font-normal fw-normal mt-3 text-center">Don't have an account?  <a href="register.html" class="text-decoration-underline font-normal fw-normal">Create an Account</a></h5>
                       </form>
                     </div>
                     <div class="tab-pane fade" id="phone" role="tabpanel" aria-labelledby="phone-tab" tabindex="0">
@@ -241,16 +233,8 @@
                             <a href="reset.html" class="text-primary text-decoration-underline font-sm fw-normal mt-1">Forget Password ?</a>
                           </div>
                         </div>
-                        <p class="text-light-primary font-sm mb-2">Your password must have at least 8 characters, one uppercase letter, one lowercase letter and one number.</p>
-                        <div class="d-flex align-items-center">
-                          <input type="checkbox" class="me-2">
-                          <label for="" class="text-primary fw-normal font-sm">Send me offers and deals</label>
-                        </div>
-                        <button type="submit" class="main-btn mt-4">Create Accoount</button>
-                        <h5 class="text-light-primary font-normal fw-normal mt-3 text-center">Already have an account?  <a href="sign-in.html" class="text-decoration-underline font-normal fw-normal">Sign In</a></h5>
-                        <h6 class="mt-3 text-light-primary font-normal fw-normal">
-                          By creating an account, I acknowledge that I have read and agree to Hojuzaty <a href="terms.html" class="text-primary text-decoration-underline">Terms & Conditions</a> and <a href="privacy.html" class="text-primary text-decoration-underline">Privacy Policy</a>.
-                        </h6>
+                        <button type="submit" class="main-btn mt-4">Sign In</button>
+                        <h5 class="text-light-primary font-normal fw-normal mt-3 text-center">Don't have an account?  <a href="register.html" class="text-decoration-underline font-normal fw-normal">Create an Account</a></h5>
                       </form>
                     </div>
                   </div>
