--- a/register.html
+++ b/register.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <header class="internal-header position-relative">
+  <header class="internal-header position-relative" style="background-image: url(assets/images/internal-header.jpeg), linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6));">
     <nav class="navbar navbar-expand-lg py-4">
     <div class="container">
         <a class="navbar-brand" href="/"><img src="assets/images/Logo.png"  class="of-contain logo main-logo" alt=""></a>
@@ -208,9 +208,6 @@
                             <img src="assets/images/icons/eye.svg" height="20px" class="of-contain eye show-pass" alt="">
                             <i class="fa fa-eye-slash text-light-primary eye hide-pass d-none"></i>
                           </div>
-                          <div class="d-flex align-items-center justify-content-end mt-2">
-                            <a href="reset.html" class="text-primary text-decoration-underline font-sm fw-normal mt-1">Forget Password ?</a>
-                          </div>
                         </div>
                         <p class="text-light-primary font-sm mb-2">Your password must have at least 8 characters, one uppercase letter, one lowercase letter and one number.</p>
                         <div class="d-flex align-items-center">
@@ -236,9 +233,6 @@
                             <input type="password" class="form-control password-field" placeholder="Password">
                             <img src="assets/images/icons/eye.svg" height="20px" class="of-contain eye show-pass" alt="">
                             <i class="fa fa-eye-slash text-light-primary eye hide-pass d-none"></i>
-                          </div>
-                          <div class="d-flex align-items-center justify-content-end mt-2">
-                            <a href="reset.html" class="text-primary text-decoration-underline font-sm fw-normal mt-1">Forget Password ?</a>
                           </div>
                         </div>
                         <p class="text-light-primary font-sm mb-2">Your password must have at least 8 characters, one uppercase letter, one lowercase letter and one number.</p>
