--- a/retrive-my-book.html
+++ b/retrive-my-book.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <header class="internal-header position-relative">
+  <header class="internal-header position-relative" style="background-image: url(assets/images/internal-header.jpeg), linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6));">
     <nav class="navbar navbar-expand-lg py-4">
     <div class="container">
         <a class="navbar-brand" href="/"><img src="assets/images/Logo.png"  class="of-contain logo main-logo" alt=""></a>
