--- a/sign-in.html
+++ b/sign-in.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <header class="internal-header position-relative">
+  <header class="internal-header position-relative" style="background-image: url(assets/images/internal-header.jpeg), linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6));">
     <nav class="navbar navbar-expand-lg py-4">
     <div class="container">
         <a class="navbar-brand" href="/"><img src="assets/images/Logo.png"  class="of-contain logo main-logo" alt=""></a>
@@ -209,7 +209,7 @@
                             <i class="fa fa-eye-slash text-light-primary eye hide-pass d-none"></i>
                           </div>
                           <div class="d-flex align-items-center justify-content-end mt-2">
-                            <a href="reset.html" class="text-primary text-decoration-underline font-sm fw-normal mt-1">Forget Password ?</a>
+                            <a href="forget-password.html" class="text-primary text-decoration-underline font-sm fw-normal mt-1">Forget Password ?</a>
                           </div>
                         </div>
                         <button type="submit" class="main-btn mt-4">Sign In</button>
@@ -230,7 +230,7 @@
                             <i class="fa fa-eye-slash text-light-primary eye hide-pass d-none"></i>
                           </div>
                           <div class="d-flex align-items-center justify-content-end mt-2">
-                            <a href="reset.html" class="text-primary text-decoration-underline font-sm fw-normal mt-1">Forget Password ?</a>
+                            <a href="forget-password.html" class="text-primary text-decoration-underline font-sm fw-normal mt-1">Forget Password ?</a>
                           </div>
                         </div>
                         <button type="submit" class="main-btn mt-4">Sign In</button>
