--- a/about-us.html
+++ b/about-us.html
@@ -177,12 +177,12 @@
           <div class="breadcrumb-div">
             <a href="/">
               <div class="d-flex align-items-center">
-                <img src="assets/images/icons/Home.svg" height="30px" class="of-contain me-1" alt="">
-                <span class="text-secondary font-regular">Home</span>
+                <img src="assets/images/icons/Home.svg" height="25px" class="of-contain me-1" alt="">
+                <span class="text-secondary font-sm">Home</span>
               </div>
             </a>
             <img src="assets/images/icons/ArrowRight.svg" height="25px" class="of-contain mx-1" alt="">
-            <span class="current-page font-regular">About Us</span>
+            <span class="current-page font-sm">About Us</span>
           </div>
         </div>
       </div>
