--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
               <div class="card-content">
                 <h4 class="text-primary font-lg fw-regular">Hot Deals on Your Next Adventure</h4>
                 <p class="text-light-primary font-normal mb-1 fw-sm">Lorem Ipsum is simply dummy text of the printing</p>
-                <a href="offer-details">Discover More</a>
+                <a href="offer-details.html">Discover More</a>
               </div>
             </div>
           </div>
@@ -445,7 +445,7 @@
               <div class="card-content">
                 <h4 class="text-primary font-lg fw-regular">Hot Deals on Your Next Adventure</h4>
                 <p class="text-light-primary font-normal mb-1 fw-sm">Lorem Ipsum is simply dummy text of the printing</p>
-                <a href="offer-details">Discover More</a>
+                <a href="offer-details.html">Discover More</a>
               </div>
             </div>
           </div>
@@ -457,7 +457,7 @@
               <div class="card-content">
                 <h4 class="text-primary font-lg fw-regular">Hot Deals on Your Next Adventure</h4>
                 <p class="text-light-primary font-normal mb-1 fw-sm">Lorem Ipsum is simply dummy text of the printing</p>
-                <a href="offer-details">Discover More</a>
+                <a href="offer-details.html">Discover More</a>
               </div>
             </div>
           </div>
