--- a/services.html
+++ b/services.html
@@ -177,19 +177,19 @@
           <div class="breadcrumb-div">
             <a href="/">
               <div class="d-flex align-items-center">
-                <img src="assets/images/icons/Home.svg" height="30px" class="of-contain me-1" alt="">
-                <span class="text-secondary font-regular">Home</span>
+                <img src="assets/images/icons/Home.svg" height="25px" class="of-contain me-1" alt="">
+                <span class="text-secondary font-sm">Home</span>
               </div>
             </a>
             <img src="assets/images/icons/ArrowRight.svg" height="25px" class="of-contain mx-1" alt="">
-            <span class="current-page font-regular">All Services</span>
+            <span class="current-page font-sm">All Services</span>
           </div>
         </div>
       </div>
     </div>
   </header>
 
-  <section class="services">
+  <section class="services inner-services">
     <div class="even-div service-div">
       <div class="container">
         <div class="title-div">
@@ -199,7 +199,7 @@
         </div>
         <div class="row">
           <div class="col-md-6 col-lg-3 col-xl-3 col-12 mb-3-sm mb-md-3">
-            <a href="services-details.html">
+            <a href="domestic-package.html">
             <div class="service-card">
               <div class="icon-bg">
                 <img src="assets/images/services/Ticket.svg" height="25px" class="of-contain" alt="">
@@ -211,7 +211,7 @@
             </a>
           </div>
           <div class="col-md-6 col-lg-3 col-xl-3 col-12 mb-3-sm mb-md-3">
-            <a href="services-details.html">
+            <a href="cruise-package.html">
             <div class="service-card">
               <div class="icon-bg">
                 <img src="assets/images/services/Boat.svg" height="25px" class="of-contain" alt="">
