--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="assets/css/owl.carousel.css">
   <link rel="stylesheet" href="assets/css/fancybox.css">
   <link rel="stylesheet" href="assets/css/owl.theme.default.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Hojuzaty | Home Page</title>
 </head>
@@ -362,7 +363,7 @@
           <span class="text-light-primary font-sm">Our Services</span>
         </div>
         <div class="main-title">
-          <h3>Embark on Your Journey with Our Exclusive Services <a href="#" class="show-all">Show All >></a></h3>
+          <h3>Embark on Your Journey with Our Exclusive Services <a href="services.html" class="show-all">Show All >></a></h3>
         </div>
       </div>
       <div class="content">
@@ -420,7 +421,7 @@
           <span class="text-light-primary font-sm">Offers</span>
         </div>
         <div class="main-title">
-          <h3>Special Offers <a href="#" class="show-all">Show All >></a></h3>
+          <h3>Special Offers <a href="offers.html" class="show-all">Show All >></a></h3>
         </div>
       </div>
       <div class="content">
@@ -475,7 +476,7 @@
           <span class="text-light-primary font-sm">Offers</span>
         </div>
         <div class="main-title">
-          <h3>“Wayana” Offers <a href="#" class="show-all">Show All >></a></h3>
+          <h3>“Wayana” Offers <a href="wayana.html" class="show-all">Show All >></a></h3>
         </div>
       </div>
       <div class="content">
@@ -734,6 +735,8 @@
   <script src="assets/js/fancybox.js"></script>
   <script src="assets/js/flatpicker.js"></script>
   <script src="assets/js/owl.carousel.js"></script>
+  <script src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
 
