--- a/services-details.html
+++ b/services-details.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/css/owl.carousel.css">
   <link rel="stylesheet" href="assets/css/fancybox.css">
   <link rel="stylesheet" href="assets/css/owl.theme.default.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Hojuzaty | Services Details</title>
 </head>
@@ -408,6 +409,8 @@
   <script src="assets/js/intlTelInput.js"></script>
   <script src="assets/js/flatpicker.js"></script>
   <script src="assets/js/owl.carousel.js"></script>
+  <script src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
 
