finishing my booking tab

--- a/profile.html
+++ b/profile.html
@@ -688,7 +688,28 @@
                       </div>
                     </div>
                     <div class="tab-pane fade" id="hotels" role="tabpanel" aria-labelledby="hotels-tab" tabindex="0">
-                      <div class="h-100 d-flex align-items-center justify-content-center">
+                      <div class="inner-tabs">
+                        <ul class="nav nav-pills row" id="pills-tab" role="tablist">
+                          <div class="col-4 px-0">
+                            <li class="nav-item" role="presentation">
+                              <button class="nav-link active" id="hotels-upcoming-tab" data-bs-toggle="pill" data-bs-target="#hotels-upcoming" type="button" role="tab" aria-controls="hotels-upcoming" aria-selected="true">Upcoming</button>
+                            </li>
+                          </div>
+                          <div class="col-4 px-0">
+                            <li class="nav-item" role="presentation">
+                              <button class="nav-link" id="hotels-past-tab" data-bs-toggle="pill" data-bs-target="#hotels-past" type="button" role="tab" aria-controls="hotels-past" aria-selected="false">Past</button>
+                            </li>
+                          </div>
+                          <div class="col-4 px-0">
+                            <li class="nav-item" role="presentation">
+                              <button class="nav-link" id="hotels-cancelled-tab" data-bs-toggle="pill" data-bs-target="#hotels-cancelled" type="button" role="tab" aria-controls="hotels-cancelled" aria-selected="false">Cancelled</button>
+                            </li>
+                          </div>
+                        </ul>
+                      </div>
+                      <div class="tab-content" id="pills-tabContent">
+                        <div class="tab-pane fade show active" id="hotels-upcoming" role="tabpanel" aria-labelledby="hotels-upcoming-tab-tab" tabindex="0">
+                          <div class="h-100 d-flex align-items-center justify-content-center">
                         <div class="text-center">
                           <img src="assets/images/Asset 11 1.png" height="300px" class="of-contain" alt="">
                           <div class="mt-4 pb-4">
@@ -698,8 +719,92 @@
                           </div>
                         </div>
                       </div>
+                        </div>
+                        <div class="tab-pane fade" id="hotels-past" role="tabpanel" aria-labelledby="hotels-past-tab" tabindex="0">
+                          <div class="h-100 d-flex align-items-center justify-content-center">
+                        <div class="text-center">
+                          <img src="assets/images/Asset 11 1.png" height="300px" class="of-contain" alt="">
+                          <div class="mt-4 pb-4">
+                            <h3 class="text-primary text-center font-3xl fw-regular">You Don't Have Any Booking</h3>
+                            <p class="text-light-primary text-center font-normal fw-normal">Check Out Some of Our Amazing offers or get Inspiration of your first Trip</p>
+                            <a href="offers.html" class="main-btn mx-auto">Explore Travel Offers</a>
+                          </div>
+                        </div>
+                      </div>
+                        </div>
+                        <div class="tab-pane fade" id="hotels-cancelled" role="tabpanel" aria-labelledby="hotels-cancelled-tab" tabindex="0">
+                          <div class="h-100 d-flex align-items-center justify-content-center">
+                        <div class="text-center">
+                          <img src="assets/images/Asset 11 1.png" height="300px" class="of-contain" alt="">
+                          <div class="mt-4 pb-4">
+                            <h3 class="text-primary text-center font-3xl fw-regular">You Don't Have Any Booking</h3>
+                            <p class="text-light-primary text-center font-normal fw-normal">Check Out Some of Our Amazing offers or get Inspiration of your first Trip</p>
+                            <a href="offers.html" class="main-btn mx-auto">Explore Travel Offers</a>
+                          </div>
+                        </div>
+                      </div>
+                        </div>
+                      </div>
                     </div>
-                    <div class="tab-pane fade" id="charter-flights" role="tabpanel" aria-labelledby="charter-flights-tab" tabindex="0">...</div>
+                    <div class="tab-pane fade" id="charter-flights" role="tabpanel" aria-labelledby="charter-flights-tab" tabindex="0">
+                      <div class="inner-tabs">
+                        <ul class="nav nav-pills row" id="pills-tab" role="tablist">
+                          <div class="col-4 px-0">
+                            <li class="nav-item" role="presentation">
+                              <button class="nav-link active" id="char-flight-upcoming-tab" data-bs-toggle="pill" data-bs-target="#char-flight-upcoming" type="button" role="tab" aria-controls="char-flight-upcoming" aria-selected="true">Upcoming</button>
+                            </li>
+                          </div>
+                          <div class="col-4 px-0">
+                            <li class="nav-item" role="presentation">
+                              <button class="nav-link" id="char-flight-past-tab" data-bs-toggle="pill" data-bs-target="#char-flight-past" type="button" role="tab" aria-controls="char-flight-past" aria-selected="false">Past</button>
+                            </li>
+                          </div>
+                          <div class="col-4 px-0">
+                            <li class="nav-item" role="presentation">
+                              <button class="nav-link" id="char-flight-cancelled-tab" data-bs-toggle="pill" data-bs-target="#char-flight-cancelled" type="button" role="tab" aria-controls="char-flight-cancelled" aria-selected="false">Cancelled</button>
+                            </li>
+                          </div>
+                        </ul>
+                      </div>
+                      <div class="tab-content" id="pills-tabContent">
+                        <div class="tab-pane fade show active" id="char-flight-upcoming" role="tabpanel" aria-labelledby="char-flight-upcoming-tab-tab" tabindex="0">
+                          <div class="h-100 d-flex align-items-center justify-content-center">
+                        <div class="text-center">
+                          <img src="assets/images/Asset 11 1.png" height="300px" class="of-contain" alt="">
+                          <div class="mt-4 pb-4">
+                            <h3 class="text-primary text-center font-3xl fw-regular">You Don't Have Any Booking</h3>
+                            <p class="text-light-primary text-center font-normal fw-normal">Check Out Some of Our Amazing offers or get Inspiration of your first Trip</p>
+                            <a href="offers.html" class="main-btn mx-auto">Explore Travel Offers</a>
+                          </div>
+                        </div>
+                      </div>
+                        </div>
+                        <div class="tab-pane fade" id="char-flight-past" role="tabpanel" aria-labelledby="char-flight-past-tab" tabindex="0">
+                          <div class="h-100 d-flex align-items-center justify-content-center">
+                        <div class="text-center">
+                          <img src="assets/images/Asset 11 1.png" height="300px" class="of-contain" alt="">
+                          <div class="mt-4 pb-4">
+                            <h3 class="text-primary text-center font-3xl fw-regular">You Don't Have Any Booking</h3>
+                            <p class="text-light-primary text-center font-normal fw-normal">Check Out Some of Our Amazing offers or get Inspiration of your first Trip</p>
+                            <a href="offers.html" class="main-btn mx-auto">Explore Travel Offers</a>
+                          </div>
+                        </div>
+                      </div>
+                        </div>
+                        <div class="tab-pane fade" id="char-flight-cancelled" role="tabpanel" aria-labelledby="char-flight-cancelled-tab" tabindex="0">
+                          <div class="h-100 d-flex align-items-center justify-content-center">
+                        <div class="text-center">
+                          <img src="assets/images/Asset 11 1.png" height="300px" class="of-contain" alt="">
+                          <div class="mt-4 pb-4">
+                            <h3 class="text-primary text-center font-3xl fw-regular">You Don't Have Any Booking</h3>
+                            <p class="text-light-primary text-center font-normal fw-normal">Check Out Some of Our Amazing offers or get Inspiration of your first Trip</p>
+                            <a href="offers.html" class="main-btn mx-auto">Explore Travel Offers</a>
+                          </div>
+                        </div>
+                      </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
