adding est2nas tab

--- a/profile.html
+++ b/profile.html
@@ -238,7 +238,22 @@
         </div>
         <div class="col-md-8 col-lg-8 col-xl-8 col-12">
           <div class="tab-content" id="v-pills-tabContent">
-            <div class="tab-pane fade" id="my-profile" role="tabpanel" aria-labelledby="my-profile-tab" tabindex="0">...</div>
+            <div class="tab-pane fade" id="my-profile" role="tabpanel" aria-labelledby="my-profile-tab" tabindex="0">
+              <div class="tab-item">
+                <div class="tab-item-header">
+                  <div class="icon-bg me-2">
+                    <img src="assets/images/profile/User.svg" alt="">
+                  </div>
+                  <div>
+                    <h3 class="fw-regular font-lg text-primary mb-1">My Profile</h3>
+                    <h4 class="fw-normal font-sm text-light-primary mb-0">View / Edit Your Personal information</h4>
+                  </div>
+                </div>
+                <div class="tab-item-body py-4">
+                  
+                </div>
+              </div>
+            </div>
             <div class="tab-pane fade show active" id="my-booking" role="tabpanel" aria-labelledby="my-booking-tab" tabindex="0">
               <div class="tab-item">
                 <div class="tab-item-header">
@@ -793,15 +808,15 @@
                         </div>
                         <div class="tab-pane fade" id="char-flight-cancelled" role="tabpanel" aria-labelledby="char-flight-cancelled-tab" tabindex="0">
                           <div class="h-100 d-flex align-items-center justify-content-center">
-                        <div class="text-center">
-                          <img src="assets/images/Asset 11 1.png" height="300px" class="of-contain" alt="">
-                          <div class="mt-4 pb-4">
-                            <h3 class="text-primary text-center font-3xl fw-regular">You Don't Have Any Booking</h3>
-                            <p class="text-light-primary text-center font-normal fw-normal">Check Out Some of Our Amazing offers or get Inspiration of your first Trip</p>
-                            <a href="offers.html" class="main-btn mx-auto">Explore Travel Offers</a>
+                            <div class="text-center">
+                              <img src="assets/images/Asset 11 1.png" height="300px" class="of-contain" alt="">
+                              <div class="mt-4 pb-4">
+                                <h3 class="text-primary text-center font-3xl fw-regular">You Don't Have Any Booking</h3>
+                                <p class="text-light-primary text-center font-normal fw-normal">Check Out Some of Our Amazing offers or get Inspiration of your first Trip</p>
+                                <a href="offers.html" class="main-btn mx-auto">Explore Travel Offers</a>
+                              </div>
+                            </div>
                           </div>
-                        </div>
-                      </div>
                         </div>
                       </div>
                     </div>
@@ -809,7 +824,31 @@
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade" id="program" role="tabpanel" aria-labelledby="program-tab" tabindex="0">...</div>
+            <div class="tab-pane fade" id="program" role="tabpanel" aria-labelledby="program-tab" tabindex="0">
+              <div class="tab-item">
+                <div class="tab-item-header">
+                  <div class="icon-bg me-2">
+                    <img src="assets/images/profile/Coin.svg" alt="">
+                  </div>
+                  <div>
+                    <h3 class="fw-regular font-lg text-primary mb-1">“Esta2nas” Program</h3>
+                    <h4 class="fw-normal font-sm text-light-primary mb-0">Manage and View Your Earned Coins</h4>
+                  </div>
+                </div>
+                <div class="tab-item-body py-4">
+                  <div class="h-100 d-flex align-items-center justify-content-center">
+                    <div class="text-center">
+                      <img src="assets/images/coins.png" height="200px" class="of-contain" alt="">
+                      <div class="mt-4 pb-4">
+                        <h3 class="text-primary text-center font-3xl fw-regular">You don't have any Earned Points</h3>
+                        <p class="text-light-primary text-center font-normal fw-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <a href="#" class="main-btn mx-auto">Subscribe Now</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
